<resources>
    <string name="app_name">Choizy admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch_name">name</string>
    <string name="branch_email">email</string>
    <string name="branch_address">address</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="nic">NIC</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="retype_password">retype Password</string>
    <string name="submit">Submit</string>
    <string name="comapny_email">Email</string>
    <string name="company_name">Name</string>
    <string name="company_category">Company category</string>
    <string name="id">ID</string>
    <string name="birthday">BirthDay</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="password_update">Password update</string>
    <string name="update">Update</string>
    <string name="category_name">category name</string>
    <string name="cancel">Cancel</string>
    <string name="student">Student</string>
    <string name="company">Company</string>
    <string name="admin">Admin</string>
    <string name="profile">Profile</string>
    <string name="view">View</string>
    <string name="city">City</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ads">Ads</string>
    <string name="category_colour">category colour</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="discount_range">Discount range</string>
    <string name="about">About</string>
    <string name="features">Features</string>
    <string name="tearms_and_conditions">Tearms and Conditions</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="student_id">Student Id</string>
    <string name="order_id">Order Id</string>
    <string name="title">title</string>
    <string name="quantity">Quantity</string>
    <string name="order_type">Order type</string>
    <string name="payment_type">Payment type</string>
    <string name="price">Price</string>
    <string name="delivery">Delivery</string>
    <string name="adavance">Adavance</string>
    <string name="available_student_loan">Available student loan -</string>
    <string name="available_loan">available loan</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>