<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text=""
            android:textColor="@color/pri"
            android:textSize="25dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/company_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".4" />

            <ImageView
                android:id="@+id/imgBrowse"
                android:layout_width="63dp"
                android:layout_height="54dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img1"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="3dp"
            android:backgroundTint="@color/blue"
            android:layout_marginEnd="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:startIconDrawable="@drawable/baseline_mail_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/name"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_business">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/mobile"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:prefixText="+94"
            app:prefixTextColor="@color/black"
            app:startIconDrawable="@drawable/baseline_local_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_dis_range_update"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/discount_range"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_local_offer_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_about_update"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/about"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_format_align_left_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_features_update"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/features"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_featured_play_list_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/com_tearms_update"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/terms_and_conditions"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_privacy_tip_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_update"
            android:layout_marginTop="24dp"
            android:textSize="18dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/light_blue2"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/update"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>